# template-cxx-library-cmake

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/my_library/: my_library.cc  my_library.hh
test/: CMakeLists.txt  gtest.cmake  main.cc
test/my_library/: my_library_test.cc
